--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-  <script src="hello.js">   </script>
+  <script src="liniyni1.js">   </script>
 
-  
-  
-   Скрипт виконано.
+
+
+  Скрипт виконано.
 </body>
 
 </html>
