--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body>
 
-  <script src="rozgal/rozgal15.js">   </script>
+  <script src="rozgal/rozgal17.js">   </script>
 
 
 
 
   Скрипт виконано.
 </body>
-
+Math.ceil(Math.random() * 100)
 </html>
