--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
 
-  <script src="rozgal/rozgal17.js">   </script>
+  <script src="rozgal/rozgal18.1.js">   </script>
 
 
-
+  Random Number
 
   Скрипт виконано.
 </body>
