--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <script src="cycles/cycles10prob.js">   </script>
+  <script src="cycles/cycles11new.js">   </script>
 
 </body>
 </html>
