--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Приклад найпростішого скрипта</title>
-
+  <title>russian warship! Go Fuck Yorself</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <script src="cycles/cycles10new.js">   </script>
+  <script src="maks.js">   </script>
 
 </body>
 </html>
