--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>russian warship! Go Fuck Yorself</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet"
+   href="style.css">
 </head>
 
-<body>
-
+<body onload="script();">
+  <script src="test.js">   </script>
   <script src="maks.js">   </script>
 
 </body>
