--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <script src="cycles/cycles22.js">   </script>
- 
+  <script src="maks.js">   </script>
+  <script src="maks2.js">   </script>
 </body>
 </html>
