add helpers and wip: cycles 31

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <script src="cycles/cycles31.2.js">   </script>
+  <script type="module" src="andrew.mjs">   </script>
 
 </body>
 </html>
