modify 31 task cycles

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>russian warship! Go Fuck Yorself</title>
-  <link rel="stylesheet"
-   href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <script type="module" src="andrew.mjs">   </script>
+  <script src="cycles/cycles31.1.js">   </script>
+
+  <script src="cycles/cycles31.2.js">   </script>
 
 </body>
+
 </html>
