--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
 
-  <script src="cycles/cycles31.1.js">   </script>
+  <script src="cycles/cycles29.js">   </script>
 
-  <script src="cycles/cycles31.2.js">   </script>
+  <!-- <script src="cycles/cycles31.2.js">   </script> -->
 
 </body>
 
