--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <script src="cycles/cycles32.1.js">   </script>
 
-  <!-- <script src="cycles/cycles31.2.js">   </script> -->
+  <script src="cycles/cycles32.2.js">   </script>
 
 </body>
 
