--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
+  
 
-  <script src="cycles/cycles33.1.js">   </script>
+   <script src="function/function14.mjs">   </script>
 
-  <script src="cycles/cycles33.2.js">   </script>
+  <!-- <script src="cycles/cycles33.2.js">   </script>  -->
 
 </body>
 
