--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 
 <body>
-  
 
-   <script src="function/function14.mjs">   </script>
+   <script src="arrays/array2.js">   </script>
 
   <!-- <script src="cycles/cycles33.2.js">   </script>  -->
 
