--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>russian warship! Go Fuck Yorself</title>
-  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 
 <body>
 
-   <script src="arrays/array5.1.js">   </script>
+   <script src="arrays/array10.js">   </script>
 
   <!-- <script src="cycles/cycles33.2.js">   </script>  -->
 
