--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-   <script src="arrays/array13.js">   </script>
+   <script src="arrays/array.js">   </script>
 
   <!-- <script src="cycles/cycles33.2.js">   </script>  -->
 
