--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <!-- <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <script src="testfunction.js"></script>
-    <title>Currency converter</title>
+    <link href="style.css" rel="stylesheet" type="text/css"> -->
+    <script src="methodsArr/arr9.js"></script>
+    <!-- <title>Currency converter</title> -->
 </head>
-
+<!-- 
 <body>
     <h1>Currency converter</h1>
     <div>
@@ -37,6 +37,6 @@
         </form>
         </p>
     </div>
-</body>
+</body> -->
 
 </html>
