--- a/index.html
+++ b/index.html
@@ -2,41 +2,41 @@
 <html lang="en">
 
 <head>
-    <!-- <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" type="text/css"> -->
-    <script src="regular/regular2.js"></script>
-    <!-- <title>Currency converter</title> -->
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <title>Employees salary</title>
 </head>
-<!-- 
-<body>
-    <h1>Currency converter</h1>
-    <div>
-        <p>
-        <form action="/form/submit" method="post">
-            <label for="money">Enter your money amount</label>
-            <input type="text" name="moneyAmount" class="input" id="money">
-        </form>
-        </p>
 
-        <p>
-        <form action="/form/submit" method="post">
-            <label for="exchange">Enter USD exchange rate</label>
-            <input type="text" name="exchangeRate" class="input" id="exchange">
-        </form>
-        <p>
-            <input type="button" value="Convert" id="converter" onclick="convertCurrency()">
-        </p>
-    </div>
+<body class="body">
+    <h1 class="h1">Employees` salary list</h1>
+    <form action="/form/submit" method="post" class="container">
+        <div class="div">
+            <p class="paragraph">
+                <label for="name" class="label">First, second and middle name of employee:</label>
+                <input type="text" class="input" id="name">
+            </p>
+            <p class="paragraph">
+                <label for="position" class="label">Position of employee:</label>
+                <input type="text" class="input" id="position">
+            </p>
+            <p class="paragraph">
+                <label for="salary" class="label">Salary (UAH) of employee :</label>
+                <input type="number" class="input" id="salary">
+            </p>
+            <p class="buttonParagraph">
+                <button type="button" class="button" id="addButton">Add to the list</button>
+            </p>
+            <p class="buttonParagraph">
+                <button type="button" class="button" id="filterButton">Filter list by salary < 3000</button>
+            </p>
+        </div>
+    </form>
     <div>
-        <p>
-        <form action="/form/submit" method="post">
-            <label for="res" id="lastlabel">Result:</label>
-            <input type="text" name="result" class="input" id="res">
-        </form>
-        </p>
+        <ol class="ol" id="list"></ol>
     </div>
-</body> -->
+    <script src="testfunction.js"></script>
+</body>
 
 </html>
