--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Employees salary</title>
 </head>
 
-<body class="body">
+<!-- <body class="body">
     <h1 class="h1">Employees` salary list</h1>
     <form action="/form/submit" method="post" class="container">
         <div class="div">
@@ -32,11 +32,11 @@
                 <button type="button" class="button" id="filterButton">Filter list by salary < 3000</button>
             </p>
         </div>
-    </form>
-    <div>
+    </form> -->
+    <!-- <div>
         <ol class="ol" id="list"></ol>
-    </div>
-    <script src="testfunction.js"></script>
+    </div> -->
+    <script src="regular/regular5.js"></script>
 </body>
 
 </html>
